CSS and Google Analytics

--- a/theme.html
+++ b/theme.html
@@ -29,7 +29,7 @@
     <link rel="apple-touch-icon" href="{PortraitURL-128}" />
     <link rel="alternate" type="application/rss+xml" href="{RSS}"/>
     <link rel="stylesheet" href="http://static.tumblr.com/xgwqnql/szhlc012n/reset.css" media="screen"/>
-    <link rel="stylesheet" href="http://static.tumblr.com/f6quix5/fiem9qlaw/site.css" media="screen"/>
+    <link rel="stylesheet" href="http://static.tumblr.com/f6quix5/uaam9sk3d/site.css" media="screen"/>
 </head>
 <body class="content-700 invert scale-images">
     <div id="header" class="pinned">
@@ -300,9 +300,19 @@
 
 <!-- Footer Scripts -->
 
-{block:IfGoogleAnalyticsWebPropertyID}
-<!-- GOOGLE ANALYTICS  CODE-->
-{/block:IfGoogleAnalyticsWebPropertyID}
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34546023-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 </body>
 </html>
