new twitter account

--- a/theme.html
+++ b/theme.html
@@ -286,7 +286,7 @@
                     <li><a href="/random">{lang:Random}</a></li>
                     <li><a href="/archive">{lang:Archive}</a></li>
                     <li><a href="/ask">{AskLabel}</a></li>
-                    <li><a href="http://twitter.com/xalernita">Twitter</a></li>
+                    <li><a href="http://twitter.com/iezg">Twitter</a></li>
                     <li><a href="/mobile">{lang:Mobile}</a></li>
                 </ul>
                 <p class="credits">
