removed search bar

--- a/theme.html
+++ b/theme.html
@@ -32,11 +32,7 @@
     <link rel="stylesheet" href="http://static.tumblr.com/f6quix5/uaam9sk3d/site.css" media="screen"/>
 </head>
 <body class="content-700 invert scale-images">
-    <div id="header" class="pinned">
-        
-        <div class="shadow"><span></span></div>
-    </div><!-- /#header -->
-
+aaa
     <!-- PAGE -->
     <div id="page" class="right-sidebar">
         <div class="banner textual">
