--- a/theme.html
+++ b/theme.html
@@ -273,12 +273,12 @@ aaa
                     <li><a href="/random">{lang:Random}</a></li>
                     <li><a href="/archive">{lang:Archive}</a></li>
                     <li><a href="/ask">{AskLabel}</a></li>
-                    <li><a href="http://twitter.com/iezg">Twitter</a></li>
                     <li><a href="/mobile">{lang:Mobile}</a></li>
+                    <li><a href="http://www.tumblr.com/theme/17403">Effector Theme</a></li>
                 </ul>
                 <p class="credits">
-                    &copy; 2012–2013 <a href="http://imanol.me">imanol.me</a> &#8212;
-                    <a href="http://www.tumblr.com/theme/17403">Effector Theme</a> by <a href="http://www.pixelunion.net">Pixel Union</a>.
+                    &copy; 2008–2013 <a href="http://imanol.me">imanol.me</a> &#8212;
+                    <a href="http://twitter.com/iezg">@iezg</a>
                 </p>
             
             </div><!-- /#footer-end -->
